@@ -1,3 +1,7 @@
+2009-04-13  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/x86-64/strrchr.S: New file.
+
 2009-04-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* stdio-common/printf.h (struct printf_info): Add user element.
